fix: font-size hero-section mobile version updated

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1934,7 +1934,7 @@ html, body, .homepage-body {
   .hero-section h1,
   .resources-page .hero-section h1,
   .aboutus-page .hero-section h1 {
-    font-size: 18px !important;
+    font-size: 16px !important;
     white-space: normal;
     line-height: 1.3;
   }
